# automata

./: .gitignore  CMakeLists.txt  README.md  automata.cbp  automata.cpp  automata.hpp  automata_fwd.hpp  state.cpp  state.hpp  transition.cpp  transition.hpp  trigger.cpp  trigger.hpp
example/: e1.cpp
